syntax = "proto3";

package com.valaphee.cran.svc.graph.v1;

option java_multiple_files = true;
option java_generic_services = true;

// Spec
message GetSpecRequest {}

message GetSpecResponse {
  string spec = 1;
}

// Graph
message ListGraphRequest {}

message ListGraphResponse {
  repeated string graphs = 1;
}

message UpdateGraphRequest {
  string graph = 1;
}

message UpdateGraphResponse {}

message DeleteGraphRequest {
  string graph_name = 1;
}

message DeleteGraphResponse {}

// Graph Scope
message RunGraphRequest {
  string graph_name = 1;
}

message RunGraphResponse {
  string scope_id = 1;
}

message StopGraphRequest {
  string scope_id = 1;
}

message StopGraphResponse {}

// Path
message PathProbeRequest {
  enum Action {
    ADD = 0;
    REMOVE = 1;
  }

  string graph_name = 1;
  uint32 path_id = 2;
  Action action = 3;
}

message PathProbeResponse {
  uint32 path_probe_id = 1;
  optional bytes data = 2;
}

// Service
service GraphService {
  rpc GetSpec (GetSpecRequest) returns (GetSpecResponse);

  rpc ListGraph (ListGraphRequest) returns (ListGraphResponse);

  rpc UpdateGraph (UpdateGraphRequest) returns (UpdateGraphResponse);

  rpc DeleteGraph (DeleteGraphRequest) returns (DeleteGraphResponse);

  rpc RunGraph (RunGraphRequest) returns (RunGraphResponse);

  rpc StopGraph (StopGraphRequest) returns (StopGraphResponse);

  rpc PathProbe (stream PathProbeRequest) returns (stream PathProbeResponse);
}
